fixed bug with the product page (suggestion images were too large)

--- a/src/Components/ClothesList/ClothesList.css
+++ b/src/Components/ClothesList/ClothesList.css
@@ -9,7 +9,7 @@
   margin-bottom: 2em;
 }
 
-.smaller-images > * {
+.smaller-image {
   height: 20em;
   width: 15em;
 }
